# Brasio-Engine

./: .gitignore  CMakeLists.txt  mkdocs.yml  serve_doc.sh  xml_report.py
assets/: p3-ppm-example.ppm
config/: config.yaml
docs/: index.md
docs/events/: index.md
include/application/: application.hh  callbacks.hh  libapplication.hh  version-control-type.hh
include/core/: builder.hh  handler.hh
include/events/: event-category-type.hh  event-type.hh  event-validator.hh  event.hh  event.hxx  key-generator.hh  libevents.hh
include/events/categories/: application.hh  categories.hh  keyboard.hh  mouse.hh  unknown.hh  window.hh
include/events/emitters/: application-event-emitter.hh  default-event-emitter.hh  emitters.hh  event-emitter.hh  keyboard-event-emitter.hh  mouse-event-emitter.hh  window-event-emitter.hh
include/events/listeners/: application-event-listener.hh  default-event-listener.hh  event-listener.hh  keyboard-event-listeners.hh  listeners.hh  mouse-event-listener.hh  window-event-listener.hh
include/events/subevents/: application-render.hh  application-tick.hh  application-update.hh  key-generator.hh  keyboard-long-press.hh  keyboard-press.hh  keyboard-release.hh  mouse-click.hh  mouse-move.hh  mouse-release.hh  mouse-scroll.hh  subevents.hh  unknown.hh  window-close.hh  window-focus.hh  window-lost-focus.hh  window-move.hh  window-resize.hh
include/geometry/: vertex.hh
include/images/: p3-ppm.hh
include/io/debug/: vulkan-renderer-debug-printer.hh
include/io/escapes/: ansi-escapes.hh
include/io/files/: stat-utils.hh
include/io/logging/: log-level.hh  logger.hh
include/math/: libmath.hh  matrix.hh  transform.hh  vector.hh
include/mesh/: cone.hh  cube.hh  cylinder.hh  fwd.hh  mesh.hh  plane.hh  sphere.hh  transform-mode.hh  triangle.hh
include/renderer/: default-renderer.hh  default_renderer.hh  queue-family-indices.hh  renderer.hh  vulkan-renderer.hh  vulkan_renderer.hh
include/renderer/structs/: uniform-buffer-object.hh
include/renderer/vulkan/: attachment.hh  buffer-memory.hh  buffer.hh  (+22 more)
include/shaders/: shader-compiler.hh  shader-manager.hh  shader-module.hh
include/utils/: image-conversions.hh  libutils.hh  version.hh
shaders/fragment/: wireframe.frag
shaders/vertex/: basic.vert  minimal-triangle.vert  ubo.vert
src/: CMakeLists.txt  main.cc
src/application/: CMakeLists.txt  application.cc  callbacks.cc
src/core/: CMakeLists.txt  handler.hxx
src/events/: CMakeLists.txt  event-validator.cc  event.hxx  key-generator.cc  libevents.cc
src/events/categories/: CMakeLists.txt  application.hxx  keyboard.hxx  mouse.hxx  unknown.hxx  window.hxx
src/events/emitters/: CMakeLists.txt  application-event-emitter.cc  default-event-emitter.cc  keyboard-event-emitter.cc  mouse-event-emitter.cc  window-event-emitter.cc
src/events/listeners/: CMakeLists.txt  application-event-listener.cc  default-event-listener.cc  keyboard-event-listener.cc  mouse-event-listener.cc  window-event-listener.cc
src/events/subevents/: CMakeLists.txt  application-render.cc  application-tick.cc  application-update.cc  key-generator.cc  keyboard-long-press.cc  keyboard-press.cc  keyboard-release.cc  mouse-click.cc  mouse-move.cc  mouse-release.cc  mouse-scroll.cc  unknown.cc  window-close.cc  window-focus.cc  window-lost-focus.cc  window-move.cc  window-resize.cc
src/geometry/: CMakeLists.txt  vertex.cc
src/images/: CMakeLists.txt  p3-ppm.cc
src/io/: CMakeLists.txt
src/io/debug/: CMakeLists.txt  vulkan-renderer-debug-printer.cc
src/io/files/: CMakeLists.txt  stat-utils.cc
src/io/logging/: CMakeLists.txt  log-level.cc  logger.cc
src/math/: CMakeLists.txt  matrix.hxx  transform.cc  vector.hxx
src/mesh/: CMakeLists.txt  cone.cc  cube.cc  cylinder.cc  mesh.cc  plane.cc  sphere.cc  triangle.cc
src/renderer/: CMakeLists.txt  default-renderer.cc  default_renderer.cc  queue-family-indices.cc  renderer.cc  swap-chain-support-details.cc  vulkan-renderer.cc  vulkan_renderer.cc
src/renderer/vulkan/: CMakeLists.txt  attachment.cc  buffer-memory.cc  buffer.cc  command-buffer-array.cc  command-pool.cc  debug-messenger.cc  descriptor-pool.cc  descriptor-set-layout.cc  descriptor-sets.cc  dynamic-state-builder.cc  fence.cc  graphics-pipeline.cc  image.cc  instance.cc  logical-device.cc  physical-device.cc  pipeline-layout.cc  queue-family-indices.cc  render-pass.cc  semaphore.cc  surface.cc  swap-chain-support-details.cc  swapchain.cc  sync-objects.cc  vulkan-renderer.cc
src/renderer/vulkan/builders/: CMakeLists.txt  application-info-builder.cc  attachment-description-builder.cc  attachment-reference-builder.cc  buffer-builder.cc  color-blend-attachment-builder.cc  color-blend-state-builder.cc  command-buffer-array-builder.cc  command-pool-builder.cc  debug-messenger-builder.cc  descriptor-pool-builder.cc  descriptor-pool-size-builder.cc  descriptor-set-layout-binding-builder.cc  descriptor-set-layout-builder.cc  descriptor-sets-builder.cc  dynamic-state-builder.cc  framebuffer-builder.cc  graphics-pipeline-builder.cc  image-builder.cc  input-assembly-builder.cc  instance-builder.cc  logical-device-builder.cc  multisampling-builder.cc  physical-device-builder.cc  pipeline-layout-builder.cc  pipeline-shader-builder.cc  pipeline-shader-info-builder.cc  rasterizer-builder.cc  render-pass-builder.cc  subpass-dependency-builder.cc  subpass-description-builder.cc  surface-builder.cc  swapchain-builder.cc  vertex-input-builder.cc  viewport-state-builder.cc
src/shaders/: CMakeLists.txt  shader-compiler.cc  shader-manager.cc  shader-module.cc
src/utils/: CMakeLists.txt  image-conversions.cc  version.cc
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  dummy.cc
tests/src/application/: CMakeLists.txt  application.cc
tests/src/events/: CMakeLists.txt  event-data.cc  event-validator.cc  event.cc
tests/src/events/generation/: CMakeLists.txt  digit-classic.cc  digit-numpad.cc  escape.cc  event-key-param.hh  lowercase-normal.cc  lowercase-shift-caps-lock.cc  uppercase-caps-lock.cc  uppercase-shift.cc
tests/src/math/: CMakeLists.txt  vector.cc
(+36 files in other folders)
