######################################################################
#    ____                _         _____             _               #
#   | __ ) _ __ __ _ ___(_) ___   | ____|_ __   __ _(_)_ __   ___    #
#   |  _ \| '__/ _` / __| |/ _ \  |  _| | '_ \ / _` | | '_ \ / _ \   #
#   | |_) | | | (_| \__ \ | (_) | | |___| | | | (_| | | | | |  __/   #
#   |____/|_|  \__,_|___/_|\___/  |_____|_| |_|\__, |_|_| |_|\___|   #
#                                              |___/                 #
######################################################################

cmake_minimum_required(VERSION 3.28.1)

project(BrasioEngine)

set(CMAKE_CXX_STANDARD 20)

add_compile_options(-Wall -Wextra -Werror -Wvla -pedantic -Wold-style-cast)

add_subdirectory(tests)
